--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@
     width: 100%;
     margin: 0px;
 }
+body{
+    margin: 0px;
+    padding: 0px;
+    background: linear-gradient(180deg,rgba(12,112,242,0.5) 20%, rgba(12,112,242,0) 25%), #303030;
+    background-repeat: no-repeat;
+}
 
 @media screen and (max-width:2600px){
     #nav{
@@ -10,7 +16,7 @@
         margin: 0px;
         display: flex;
         justify-content: space-around;
-        padding: 0px;
+        padding: 0px;border-bottom: 1px solid #bababa;
     }
     #nav div{
         width:120%;
@@ -19,7 +25,7 @@
     }
     #nav div ul{
         width: 70%;
-        margin-top: 2%;
+        margin-top: 1%;
         padding-left: 0px;
         margin-left: 5%;
         display: flex;
@@ -34,10 +40,7 @@
         transition-duration: 0.5s;
     }
     #nav div ul li:hover{
-        background-color: white;
-        border: 2px solid rgb(115, 115, 117);
-        color: black;
-        box-shadow: 2px 1px 5px 1px whitesmoke;
+        color: #cccccc;
     }
     #nav div ul li a{
         cursor: pointer;  
@@ -46,8 +49,17 @@
         width: 80px;
         height: 40px;
         margin: auto 3% auto 3%;
-        text-transform: uppercase;
-    
+        color: white;
+        background-color: #0c70f2;
+        border:0px;
+        font-family: "Inter", sans-serif;
+        font-size: 20px;
+        font-weight: 600;
+        box-shadow: 3px 2px 4px rgba(12,112,242,0.25);
+        
+    }
+    #body{
+        height: 1800px;
     }
 }
 
