--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,13 @@
     width: 100%;
     margin: 0px;
 }
+:root{
+    --azul-dnc:#0c70f2;
+    --preto-dnc:#303030;
+    --cinza-hover:#c9c9c9;
+
+    --fonte-padrao:'Inter';
+}
 body{
     margin: 0px;
     padding: 0px;
@@ -12,7 +19,7 @@ body{
 @media screen and (max-width:2600px){
     #nav{
         height: 100px;
-        background-color: #303030;
+        background-color: var(--preto-dnc);
         margin: 0px;
         display: flex;
         justify-content: space-around;
@@ -40,6 +47,7 @@ body{
         transition-duration: 0.5s;
     }
     #nav div ul li:hover{
+        font-family: var(--fonte-padrao);
         color: #cccccc;
     }
     #nav div ul li a{
@@ -50,7 +58,7 @@ body{
         height: 40px;
         margin: auto 3% auto 3%;
         color: white;
-        background-color: #0c70f2;
+        background-color: var(--azul-dnc);
         border:0px;
         font-family: "Inter", sans-serif;
         font-size: 20px;
@@ -59,135 +67,105 @@ body{
         
     }
     #body{
-        height: 1800px;
+        display: flex;
+        flex-direction:column ;
+        justify-content: center;
+        align-items: center;
+        margin-top: 150px;
+        margin-bottom: 100px;
     }
-}
 
-/*
 
-@media screen and (max-width:2000px){
-    #nav{
-        height: 60px;
-        background-color: #303030;
-        margin: 0px;
-        display: grid;
-        grid-auto-flow: column;
-        columns: auto;
-        padding: 0px;
+    #body header{
+    text-align: center;
+    color: white;
+    font-size: var(--fonte-padrao);
     }
-    #nav div{
-        width:100%;
-        margin: 0px;
-        padding: 5px;
-    }
-    #nav div ul{
-        width: 100%;
-        margin-left: 10%;
-        margin-top: 10px;
-
-    }
-    #nav div ul li{
-        width: 250px;
-        padding: 5px;
-        display: inline-block;
-        color: white;
-    }
-    #nav div ul li a{
-        /*text-decoration: none;*/
+    #body header h1{ 
+        font-size: 80px;
+        font-weight: 800;
+        text-align: center;
         text-transform: uppercase;
+        margin-bottom: 15px;
+    }
+    #body header h2{
+        text-align: center;
+        font-size: 40px;
+        font-weight: 700;
+        margin-bottom: 100px;
+    }
+    .text_select{
+        background-color: black;
+        font-weight: bolder;
+        padding: 5px;
+    }
+    #formulario{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 0px;
+        font-family: var(--fonte-padrao);
+        font-size: 30px;
+        font-weight: 300;
+    }
+    #formulario input::placeholder{
+        color: rgba(57,57,57,0.5);
+    }
+    .form-group{
+        width: 30%;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .form-group label{
+        text-align: left;
+        margin-bottom: 10px;
+        margin-top: 15px;
+    }
+    .form-group input{
+    border-radius: 10px;
+    border: none;
+    height: 30px;
+    padding: 10px;
+    font-size: 20px;
+    }
+    #a-interesse{
+   
+    }
+    .chackboxitens{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        margin: 0px;
+        padding-left: 0%;
+        align-items: center;
+    }
+    .chackboxitens input{
+        margin: 15px 0px 15px 0px;
+        
+    }
+    .chackboxitens label{
+        font-size: 21px;
+        margin: 20px 0px auto -50px;
+   
+    }
+    input[type="checkbox"]{
+        transform: scale(1.0);
+        margin-left: 0px;
+    }
+    input[type="submit"]{
+        width: 100%;
+        height: 56px;
+        background-color: var(--azul-dnc);
+        font-size: 32px;
+        height: 600;
+        color:white;
+        margin-top: 70px;
+        box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
         cursor: pointer;
     }
-    #nav button{
-        width: 80px;
-        height: 40px;
-        margin: auto 25px auto auto;
-        text-transform: uppercase;
-    
-    }
 }
-*/
-
-/*
-@media screen and (max-width:1200px){
-    #nav{
-        height: 60px;
-        background-color: #303030;
-        margin: 0px;
-        display: grid;
-        grid-auto-flow: column;
-        columns: auto;
-        padding: 0px;
-    }
-    #nav div{
-        width:100%;
-        margin: 0px;
-        padding: 5px;
-    }
-    #nav div ul{
-        width: 100%;
-        margin-left: 10%;
-        margin-top: 10px;
-
-    }
-    #nav div ul li{
-        width: 250px;
-        padding: 5px;
-        display: inline-block;
-        color: white;
-    }
-    #nav div ul li a{
-        /*text-decoration: none;*/
-        text-transform: uppercase;
-        cursor: pointer;
-    }
-    #nav button{
-        width: 80px;
-        height: 40px;
-        margin: auto 25px auto auto;
-        text-transform: uppercase;
-    
-    }
-}*/
-
-/*
-@media screen and (max-width:800px){
-    #nav{
-        height: 60px;
-        background-color: #303030;
-        margin: 0px;
-        display: grid;
-        grid-auto-flow: column;
-        columns: auto;
-        padding: 0px;
-    }
-    #nav div{
-        width:100%;
-        margin: 0px;
-        padding: 5px;
-    }
-    #nav div ul{
-        width: 100%;
-        margin-left: 10%;
-        margin-top: 10px;
-
-    }
-    #nav div ul li{
-        width: 250px;
-        padding: 5px;
-        display: inline-block;
-        color: white;
-    }
-    #nav div ul li a{
-        /*text-decoration: none;*/
-        text-transform: uppercase;
-        cursor: pointer;
-    }
-    #nav button{
-        width: 80px;
-        height: 40px;
-        margin: auto 25px auto auto;
-        text-transform: uppercase;
-    
-    }
-}
-*/
