--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,34 @@
-*{
-    width: 100%;
-    margin: 0px;
-}
-:root{
-    --azul-dnc:#0c70f2;
-    --preto-dnc:#303030;
-    --cinza-hover:#c9c9c9;
+    *{
+        width: 100%;
+        margin: 0px;
+    }
+    :root{
+        --azul-dnc:#0c70f2;
+        --preto-dnc:#303030;
+        --cinza-hover:#c9c9c9;
 
-    --fonte-padrao:'Inter';
-}
-body{
-    margin: 0px;
-    padding: 0px;
-    background: linear-gradient(180deg,rgba(12,112,242,0.5) 20%, rgba(12,112,242,0) 25%), #303030;
-    background-repeat: no-repeat;
-}
-
-@media screen and (max-width:2600px){
+        --fonte-padrao:'Inter';
+    }
+    body{
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+        padding: 0%;
+        background: linear-gradient(180deg,rgba(12,112,242,0.5) 20%, rgba(12,112,242,0) 25%), #303030;
+        background-repeat: no-repeat;
+    }
     #nav{
+        width: 100%;
         height: 100px;
         background-color: var(--preto-dnc);
         margin: 0px;
         display: flex;
         justify-content: space-around;
-        padding: 0px;border-bottom: 1px solid #bababa;
+        padding: 0px;
+        border-bottom: 1px solid #bababa;
     }
     #nav div{
-        width:120%;
+        width:100%;
         margin: 0px;
         padding: 5px; 
     }
@@ -38,6 +40,7 @@ body{
         display: flex;
         justify-content: space-around;
         text-align: center;
+
     }
     #nav div ul li{
         padding: 5px;
@@ -56,7 +59,7 @@ body{
     #nav button{
         width: 80px;
         height: 40px;
-        margin: auto 3% auto 3%;
+        margin: 30px 100px auto 25px;
         color: white;
         background-color: var(--azul-dnc);
         border:0px;
@@ -64,8 +67,13 @@ body{
         font-size: 20px;
         font-weight: 600;
         box-shadow: 3px 2px 4px rgba(12,112,242,0.25);
-        
+        cursor: pointer;
+    }#nav button:hover{
+        margin: 27px 100px auto 25px;
+        border: 2px solid whitesmoke;
+        box-shadow: 2px 5px 20px rgba(179, 193, 210, 0.25);
     }
+
     #body{
         display: flex;
         flex-direction:column ;
@@ -133,9 +141,6 @@ body{
     padding: 10px;
     font-size: 20px;
     }
-    #a-interesse{
-   
-    }
     .chackboxitens{
         width: 100%;
         display: flex;
@@ -151,7 +156,6 @@ body{
     .chackboxitens label{
         font-size: 21px;
         margin: 20px 0px auto -50px;
-   
     }
     input[type="checkbox"]{
         transform: scale(1.0);
@@ -167,5 +171,442 @@ body{
         margin-top: 70px;
         box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
         cursor: pointer;
+    } 
+
+    /*  footer */
+    footer{
+        width: 100%;
+        background-color: var(--azul-dnc);
+        color:white;
+        padding: 15px auto auto auto;
+        font-family: var(--fonte-padrao);
     }
-}
+    footer .footer-links{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin: 10px auto auto auto;
+    }
+    footer nav{
+        width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            border-radius: 10px;
+            margin: 2% auto auto auto;
+            padding: 3px;
+    }
+    footer .footer-links nav h5{
+        width: 200px;
+        text-align: center;
+        color: white;
+        font-weight: 800;
+        font-size: 25px;
+        border-radius: 10px;
+        font-family: var(--fonte-padrao);
+        background-color: var(--preto-dnc);
+    }
+    footer ul{
+        list-style: none;
+        margin: 0px;
+        padding: 0px;
+        display:list-item;
+        justify-content: space-between;
+      /*  justify-content:;
+        text-align: center;*/
+    }
+    footer ul li{
+        text-align: center;
+        color: white;
+        font-size: 20px;
+        font-weight: 600;
+        margin: 20px 0px 20px 0px;
+        cursor: pointer;
+    }
+    footer ul li:hover{
+        color:#bababa;
+    }
+    #endereco{
+        text-align: center;
+    }
+    #politica{
+    text-align: center;
+    padding-bottom: 2%;
+    margin: 2% auto auto 0px;
+    }
+
+
+    @media only screen and (max-width: 360px) {
+        #nav{
+            display: flex;
+            height: 110px;
+        }
+        body nav div{
+            margin: 0px;
+            padding: 0px       
+        }
+
+
+        #nav div ul {
+            width:200px;
+            font-size: 15px;
+            display: inline-block;
+            justify-content: space-around;
+            text-align: left;
+
+        }
+        #nav div ul  li a{
+            width: 100%;
+            font-size: 15px;
+        }
+        #nav button{
+            font-size: 15px;
+        }
+        #body header h1{
+            margin-top: -100px;
+            font-size: 45px;
+        }
+        #body header h2{
+            font-size: 25px;
+        }
+        #body header h2 span{
+            font-size: 25px;
+        }
+        .form-group{
+            width: 100%;
+            padding: 10px 12px 10px 20px;
+        }
+        #formulario{
+            margin: 0px;
+        }
+        #formulario label{
+            font-size: 20px;
+        }
+        #formulario input{
+            width: 90%;
+        }
+        input[type="checkbox"]{
+            transform: scale(0.5);
+        }
+        .chackboxitens input{
+            margin: 15px 0px 15px 0px;
+            
+        }
+        #formulario .chackboxitens label{
+            font-weight: 100;
+            font-size: 15px;
+            margin: 15px 0px 15px 0px;
+        }
+        #formulario .form-group input[type="submit"]{
+            width: 95%;
+            margin-left: 5px;
+        }
+        footer .footer-links{
+            display: block;
+            justify-content: space-around;
+            align-items: center;
+            margin: 10px auto auto auto;
+        }
+        footer .footer-links nav h5{
+            width: 80%;
+            font-size: 20px;
+            font-weight: 100px;
+        }
+        footer li a{
+            font-size: 18px;
+
+        }
+        #endereco{
+            font-size: 15px;
+            font-weight: 100;
+            text-align: center;
+            margin-top: 25px;
+        }
+        #politica{
+            text-align: center;
+            padding-bottom: 2%;
+            margin: 8% auto auto 0px;
+            }
+    }
+    @media only screen and (max-width: 480px) {
+        #nav{
+            display: flex;
+            height: 110px;
+        }
+        body nav div{
+            margin: 0px;
+            padding: 0px; 
+        }
+
+
+        #nav div ul {
+            width:200px;
+            display: inline-block;
+            justify-content: space-around;
+            text-align: left;
+
+        }
+        #nav div ul  li a{
+            width: 100%;
+            font-size: 18px;
+        }
+        #nav button{
+            font-size: 15px;
+        }
+        #body header h1{
+            margin-top: -100px;
+            font-size: 45px;
+        }
+        #body header h2{
+            font-size: 22px;
+        }
+        #body header h2 span{
+            font-size: 25px;
+        }
+        .form-group{
+            width: 100%;
+            padding: 10px 12px 10px 20px;
+        }
+        #formulario{
+            margin: 0px;
+        }
+        #formulario label{
+            font-size: 20px;
+        }
+        #formulario input{
+            width: 90%;
+        }
+        input[type="checkbox"]{
+            transform: scale(0.5);
+        }
+        .chackboxitens input{
+            margin: 15px 0px 15px 0px;
+            
+        }
+        #formulario .chackboxitens label{
+            font-weight: 100;
+            font-size: 15px;
+            margin: 15px 0px 15px 0px;
+        }
+        #formulario .form-group input[type="submit"]{
+            width: 95%;
+            margin-left: 5px;
+        }
+        footer .footer-links{
+            display: block;
+            justify-content: space-around;
+            align-items: center;
+            margin: 10px auto auto auto;
+        }
+        footer .footer-links nav h5{
+            width: 80%;
+            font-size: 20px;
+            font-weight: 100px;
+        }
+        footer li a{
+            font-size: 18px;
+
+        }
+        #endereco{
+            font-size: 15px;
+            font-weight: 100;
+            text-align: center;
+            margin-top: 25px;
+        }
+        #politica{
+            text-align: center;
+            padding-bottom: 2%;
+            margin: 8% auto auto 0px;
+            }
+
+    }
+    @media only screen and (max-width: 600px) {
+        #nav{
+            display: flex;
+            height: 110px;
+        }
+        body nav div{
+            margin: 0px;
+            padding: 0px; 
+        }
+
+
+        #nav div ul {
+            width:200px;
+            display: inline-block;
+            justify-content: space-around;
+            text-align: left;
+
+        }
+        #nav div ul  li a{
+            width: 100%;
+            font-size: 18px;
+        }
+        #nav button{
+            font-size: 15px;
+        }
+        #body header h1{
+            margin-top: -50px;
+            font-size: 60px;
+        }
+        #body header h2{
+            font-size: 25px;
+        }
+        #body header h2 span{
+            font-size: 25px;
+        }
+        .form-group{
+            width: 100%;
+            padding: 10px 12px 10px 20px;
+        }
+        #formulario{
+            margin: 0px;
+        }
+        #formulario label{
+            font-size: 20px;
+        }
+        #formulario input{
+            width: 90%;
+        }
+        input[type="checkbox"]{
+            transform: scale(0.5);
+        }
+        .chackboxitens input{
+            margin: 15px 0px 15px 0px;
+            
+        }
+        #formulario .chackboxitens label{
+            font-weight: 100;
+            font-size: 15px;
+            margin: 15px 0px 15px 0px;
+        }
+        #formulario .form-group input[type="submit"]{
+            width: 95%;
+            margin-left: 5px;
+        }
+        footer .footer-links{
+            display: block;
+            justify-content: space-around;
+            align-items: center;
+            margin: 10px auto auto auto;
+        }
+        footer .footer-links nav h5{
+            width: 80%;
+            font-size: 20px;
+            font-weight: 100px;
+        }
+        footer li a{
+            font-size: 18px;
+
+        }
+        #endereco{
+            font-size: 15px;
+            font-weight: 100;
+            text-align: center;
+            margin-top: 25px;
+        }
+        #politica{
+            text-align: center;
+            padding-bottom: 2%;
+            margin: 8% auto auto 0px;
+            }
+
+    }
+    @media only screen and (max-width: 900px) {
+        #nav{
+            display: flex;
+            height: 110px;
+        }
+        body nav div{
+            margin: 0px;
+            padding: 0px; 
+        }
+
+
+        #nav div ul {
+            width:200px;
+            display: inline-block;
+            justify-content: space-around;
+            text-align: left;
+
+        }
+        #nav div ul  li a{
+            width: 100%;
+            font-size: 18px;
+        }
+        #nav button{
+            font-size: 15px;
+        }
+        #body header h1{
+            margin-top: -50px;
+            font-size: 60px;
+        }
+        #body header h2{
+            font-size: 25px;
+        }
+        #body header h2 span{
+            font-size: 25px;
+        }
+        .form-group{
+            width: 100%;
+            padding: 10px 12px 10px 20px;
+        }
+        #formulario{
+            margin: 0px;
+        }
+        #formulario label{
+            font-size: 20px;
+            margin-left: 3%;
+        }
+        #formulario .form-group input{
+            width: 93%;
+            margin-left: 2%;
+        }
+        input[type="checkbox"]{
+            transform: scale(0.5);
+        }
+        .chackboxitens input{
+            margin: 15px 0px 15px 0px;
+            
+        }
+        #formulario .chackboxitens label{
+            font-weight: 100;
+            font-size: 15px;
+            margin: 15px 0px 15px 0px;
+        }
+        #formulario .form-group input[type="submit"]{
+            width: 95%;
+            margin-left: 5px;
+        }
+        footer .footer-links{
+            display: block;
+            justify-content: space-around;
+            align-items: center;
+            margin: 10px auto auto auto;
+        }
+        footer .footer-links nav h5{
+            width: 80%;
+            font-size: 20px;
+            font-weight: 100px;
+        }
+        footer li a{
+            font-size: 18px;
+
+        }
+        #endereco{
+            font-size: 15px;
+            font-weight: 100;
+            text-align: center;
+            margin-top: 25px;
+        }
+        #politica{
+            text-align: center;
+            padding-bottom: 2%;
+            margin: 8% auto auto 0px;
+            }
+
+    }
+
+
+    
+
